# docs/swagger.json
@@ -425,7 +425,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "LikeComment id",
+                        "description": "Comment id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -463,13 +463,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Comment"
+                    "Like"
                 ],
-                "summary": "Get all User dislike blog.",
+                "summary": "Get all User dislike comment blog.",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Post id",
+                        "description": "Comment id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -500,7 +500,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Comment"
+                    "Like"
                 ],
                 "summary": "Get all User likes based on comment blog post id.",
                 "parameters": [
@@ -777,14 +777,14 @@
         },
         "/post/{id}/like/{status}": {
             "post": {
-                "description": "create new category for post.",
+                "description": "like existing post",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Like"
                 ],
-                "summary": "Create Category",
+                "summary": "Like post",
                 "parameters": [
                     {
                         "type": "string",
@@ -863,7 +863,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Post"
+                    "Like"
                 ],
                 "summary": "Get all User like based on blog post id.",
                 "parameters": [
@@ -1072,6 +1072,7 @@
         "controllers.RegisterInput": {
             "type": "object",
             "required": [
+                "email",
                 "name",
                 "password",
                 "role",
